modules/demo-workloads/expose-prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: cattle-prometheus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
spec:
  tls:
    - hosts:
        - prometheus.k8s-demo.plgrnd.be
      secretName: prometheus-demo-tls
  rules:
  - host: prometheus.k8s-demo.plgrnd.be
    http:
      paths:
      - backend:
          serviceName: access-prometheus
          servicePort: 80
        path: /
